Added review workflow

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,6 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <p>We're looking at deploying static websites to azure with github actions!</p>
   </body>
 </html>
